--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,9 +1,51 @@
-# Node modules
-frontend/node_modules/
+# ==============================
+# Node / React (Frontend)
+# ==============================
+node_modules/
+build/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.env
+.DS_Store
 
-# Python virtual environment
-backend/venv/
-
-# Python cache
-*.pyc
+# ==============================
+# Python / Flask (Backend)
+# ==============================
+venv/
+*.py[cod]
 __pycache__/
+instance/
+*.sqlite3
+*.env
+*.log
+*.pot
+*.pyc
+
+# ==============================
+# VS Code / IDEs
+# ==============================
+.vscode/
+.idea/
+*.sublime-project
+*.sublime-workspace
+
+# ==============================
+# System files
+# ==============================
+Thumbs.db
+.DS_Store
+
+# ==============================
+# Optional: GitHub Actions / CI
+# ==============================
+*.egg-info/
+*.egg
+dist/
+build/
+eggs/
+parts/
+pip-wheel-metadata/
+*.manifest
+*.spec
+*.egg-info/
