--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,9 @@
 "node_modules/" 
 "build/" 
 "frontend/" 
+"backend/"
+"app.py"
+"frontend/src/App.css"
+"frontend/src/index.css"
+"frontend/src/App.js"
+"uploads"
